--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@types/styled-components": "^5.1.26",
     "components": "^0.1.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^3.7.0",
     "styled": "^1.0.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "typescript": "^4.6.4",
